@@ -1,6 +1,7 @@
 package org.anne.aoc2021;
 
 import org.anne.common.Day;
+import org.anne.common.Point3d;
 
 import java.util.*;
 import java.util.function.Function;
@@ -19,7 +20,7 @@ public class Day19 extends Day {
 
     public static int part1(List<String> input) {
         scanners = getScanners(input);
-        Set<Coordinate> trenchMap = new HashSet<>();
+        Set<Point3d> trenchMap = new HashSet<>();
         List<Scanner> done = new ArrayList<>();
         done.add(scanners.get(0));
         int i = 0;
@@ -43,11 +44,11 @@ public class Day19 extends Day {
     }
 
     public static int part2() {
-        List<Coordinate> placements = scanners.stream().map(Scanner::getPlacementTo0).collect(Collectors.toList());
+        List<Point3d> placements = scanners.stream().map(Scanner::getPlacementTo0).toList();
         int maxDistance = 0;
         for (int i = 0; i < placements.size(); i++) {
-            for (Coordinate placement : placements) {
-                int distance = placement.getManhattanDistance(placements.get(i));
+            for (Point3d placement : placements) {
+                int distance = placement.manhattanDistance(placements.get(i));
                 if (distance > maxDistance) {
                     maxDistance = distance;
                 }
@@ -57,7 +58,7 @@ public class Day19 extends Day {
     }
 
     static List<Scanner> getScanners(List<String> input) {
-        List<List<Coordinate>> inputList = new ArrayList<>();
+        List<List<Point3d>> inputList = new ArrayList<>();
         int i = -1;
         for (String line : input) {
             if (!line.isEmpty()) {
@@ -66,7 +67,7 @@ public class Day19 extends Day {
                     i++;
                 } else {
                     String[] coordinates = line.split(",");
-                    inputList.get(i).add(new Coordinate(Integer.parseInt(coordinates[0]),
+                    inputList.get(i).add(new Point3d(Integer.parseInt(coordinates[0]),
                             Integer.parseInt(coordinates[1]), Integer.parseInt(coordinates[2])));
                 }
             }
@@ -74,45 +75,31 @@ public class Day19 extends Day {
         return inputList.stream().map(Scanner::new).collect(Collectors.toList());
     }
 
-    public static record Coordinate (int x, int y, int z) {
-        public Coordinate add(Coordinate to) {
-            return new Coordinate(x + to.x, y + to.y, z + to.z);
-        }
-
-        public Coordinate reverse() {
-            return new Coordinate(-this.x, -this.y, -this.z);
-        }
-
-        public int getManhattanDistance(Coordinate to) {
-            return Math.abs(this.x - to.x) + Math.abs(this.y - to.y) + Math.abs(this.z - to.z);
-        }
-    }
-
     public static class Scanner {
 
-        final List<Coordinate> givenMeasurements;
+        final List<Point3d> givenMeasurements;
         final List<Measurement> measurements;
 
         final List<Rotation> rotationList = new ArrayList<>();
 
-        public Scanner(List<Coordinate> givenMeasurements) {
+        public Scanner(List<Point3d> givenMeasurements) {
             this.givenMeasurements = givenMeasurements;
             measurements = givenMeasurements.stream()
                     .map(mes -> new Measurement(mes, givenMeasurements))
                     .collect(Collectors.toList());
         }
 
-        public Coordinate getPlacementTo0() {
-            Coordinate rotated = new Coordinate(0, 0, 0);
+        public Point3d getPlacementTo0() {
+            Point3d rotated = new Point3d(0, 0, 0);
             for (int i = rotationList.size() - 1; i >= 0; i--) {
                 rotated = rotationList.get(i).apply(rotated);
             }
             return rotated;
         }
 
-        List<Coordinate> getRotationTo0() {
+        List<Point3d> getRotationTo0() {
             return givenMeasurements.stream().map(gm -> {
-                Coordinate rotated = gm;
+                Point3d rotated = gm;
                 for (int i = rotationList.size() - 1; i >= 0; i--) {
                     rotated = rotationList.get(i).apply(rotated);
                 }
@@ -142,7 +129,7 @@ public class Day19 extends Day {
         private Rotation calculateRotation(DistPair commons) {
             for (int i = 1; i < 25; i++) {
                 Rotation rotation = Rotation.of(i);
-                Coordinate move = rotation.matches(commons);
+                Point3d move = rotation.matches(commons);
                 if (move != null) {
                     rotation.setMove(move);
                     return rotation;
@@ -154,63 +141,64 @@ public class Day19 extends Day {
     }
 
     public static class Rotation {
-        final Function<Coordinate, Integer> getX;
-        final Function<Coordinate, Integer> getY;
-        final Function<Coordinate, Integer> getZ;
-        Coordinate move;
+        final Function<Point3d, Integer> getX;
+        final Function<Point3d, Integer> getY;
+        final Function<Point3d, Integer> getZ;
+        Point3d move;
 
-        public Rotation(Function<Coordinate, Integer> getX,
-                        Function<Coordinate, Integer> getY,
-                        Function<Coordinate, Integer> getZ) {
+        public Rotation(Function<Point3d, Integer> getX,
+                        Function<Point3d, Integer> getY,
+                        Function<Point3d, Integer> getZ) {
             this.getX = getX;
             this.getY = getY;
             this.getZ = getZ;
         }
 
-        public void setMove(Coordinate move) {
+        public void setMove(Point3d move) {
             this.move = move;
         }
 
-        public Coordinate apply(Coordinate to) {
-            Coordinate rotated = new Coordinate(getX.apply(to), getY.apply(to), getZ.apply(to));
+        public Point3d apply(Point3d to) {
+            Point3d rotated = new Point3d(getX.apply(to), getY.apply(to), getZ.apply(to));
             return move == null ? rotated : rotated.add(move);
         }
 
+        @SuppressWarnings("Convert2MethodRef")
         public static Rotation of(int num) {
             return switch (num) {
-                case  1 -> new Rotation(c ->  c.x, c ->  c.y, c ->  c.z);
-                case  2 -> new Rotation(c ->  c.x, c ->  c.z, c -> -c.y);
-                case  3 -> new Rotation(c ->  c.x, c -> -c.y, c -> -c.z);
-                case  4 -> new Rotation(c ->  c.x, c -> -c.z, c ->  c.y);
-                case  5 -> new Rotation(c -> -c.x, c -> -c.y, c ->  c.z);
-                case  6 -> new Rotation(c -> -c.x, c ->  c.z, c ->  c.y);
-                case  7 -> new Rotation(c -> -c.x, c ->  c.y, c -> -c.z);
-                case  8 -> new Rotation(c -> -c.x, c -> -c.z, c -> -c.y);
-                case  9 -> new Rotation(c ->  c.y, c -> -c.x, c ->  c.z);
-                case 10 -> new Rotation(c ->  c.y, c ->  c.z, c ->  c.x);
-                case 11 -> new Rotation(c ->  c.y, c ->  c.x, c -> -c.z);
-                case 12 -> new Rotation(c ->  c.y, c -> -c.z, c -> -c.x);
-                case 13 -> new Rotation(c -> -c.y, c ->  c.x, c ->  c.z);
-                case 14 -> new Rotation(c -> -c.y, c -> -c.z, c ->  c.x);
-                case 15 -> new Rotation(c -> -c.y, c -> -c.x, c -> -c.z);
-                case 16 -> new Rotation(c -> -c.y, c ->  c.z, c -> -c.x);
-                case 17 -> new Rotation(c ->  c.z, c ->  c.y, c -> -c.x);
-                case 18 -> new Rotation(c ->  c.z, c ->  c.x, c ->  c.y);
-                case 19 -> new Rotation(c ->  c.z, c -> -c.y, c ->  c.x);
-                case 20 -> new Rotation(c ->  c.z, c -> -c.x, c -> -c.y);
-                case 21 -> new Rotation(c -> -c.z, c ->  c.y, c ->  c.x);
-                case 22 -> new Rotation(c -> -c.z, c -> -c.x, c ->  c.y);
-                case 23 -> new Rotation(c -> -c.z, c -> -c.y, c -> -c.x);
-                case 24 -> new Rotation(c -> -c.z, c ->  c.x, c -> -c.y);
+                case  1 -> new Rotation(c ->  c.x(), c ->  c.y(), c ->  c.z());
+                case  2 -> new Rotation(c ->  c.x(), c ->  c.z(), c -> -c.y());
+                case  3 -> new Rotation(c ->  c.x(), c -> -c.y(), c -> -c.z());
+                case  4 -> new Rotation(c ->  c.x(), c -> -c.z(), c ->  c.y());
+                case  5 -> new Rotation(c -> -c.x(), c -> -c.y(), c ->  c.z());
+                case  6 -> new Rotation(c -> -c.x(), c ->  c.z(), c ->  c.y());
+                case  7 -> new Rotation(c -> -c.x(), c ->  c.y(), c -> -c.z());
+                case  8 -> new Rotation(c -> -c.x(), c -> -c.z(), c -> -c.y());
+                case  9 -> new Rotation(c ->  c.y(), c -> -c.x(), c ->  c.z());
+                case 10 -> new Rotation(c ->  c.y(), c ->  c.z(), c ->  c.x());
+                case 11 -> new Rotation(c ->  c.y(), c ->  c.x(), c -> -c.z());
+                case 12 -> new Rotation(c ->  c.y(), c -> -c.z(), c -> -c.x());
+                case 13 -> new Rotation(c -> -c.y(), c ->  c.x(), c ->  c.z());
+                case 14 -> new Rotation(c -> -c.y(), c -> -c.z(), c ->  c.x());
+                case 15 -> new Rotation(c -> -c.y(), c -> -c.x(), c -> -c.z());
+                case 16 -> new Rotation(c -> -c.y(), c ->  c.z(), c -> -c.x());
+                case 17 -> new Rotation(c ->  c.z(), c ->  c.y(), c -> -c.x());
+                case 18 -> new Rotation(c ->  c.z(), c ->  c.x(), c ->  c.y());
+                case 19 -> new Rotation(c ->  c.z(), c -> -c.y(), c ->  c.x());
+                case 20 -> new Rotation(c ->  c.z(), c -> -c.x(), c -> -c.y());
+                case 21 -> new Rotation(c -> -c.z(), c ->  c.y(), c ->  c.x());
+                case 22 -> new Rotation(c -> -c.z(), c -> -c.x(), c ->  c.y());
+                case 23 -> new Rotation(c -> -c.z(), c -> -c.y(), c -> -c.x());
+                case 24 -> new Rotation(c -> -c.z(), c ->  c.x(), c -> -c.y());
                 default -> null;
             };
         }
 
-        public Coordinate matches(DistPair commons) {
-            Coordinate newOrigin = this.apply(commons.right.get(0).from);
+        public Point3d matches(DistPair commons) {
+            Point3d newOrigin = this.apply(commons.right.get(0).from);
             List<BeaconDistance> transformed = commons.right.stream()
                     .map(bd -> new BeaconDistance(newOrigin, this.apply(bd.to), bd.distance))
-                    .collect(Collectors.toList());
+                    .toList();
             int errorLimit = transformed.size() - 11;
             Map<Integer, Long> grouped = commons.left.stream().map(BeaconDistance::getDistance)
                     .collect(Collectors.groupingBy(Function.identity(), Collectors.counting()));
@@ -219,14 +207,14 @@ public class Day19 extends Day {
                     errorLimit += val * (val - 1);
                 }
             }
-            Coordinate dist = commons.left.get(0).from.add(transformed.get(0).from.reverse());
+            Point3d dist = commons.left.get(0).from.add(transformed.get(0).from.reverse());
             int errCount = 0;
             for (int i = 0; i < commons.left.size(); i++) {
                 BeaconDistance left = commons.left.get(i);
                 for (int j = 1; j < transformed.size(); j++) {
                     BeaconDistance right = transformed.get(j);
                     if (left.distance.equals(right.distance)) {
-                        Coordinate currentDist = left.to.add(right.to.reverse());
+                        Point3d currentDist = left.to.add(right.to.reverse());
                         if (!dist.equals(currentDist)) {
                             errCount++;
                         }
@@ -243,9 +231,9 @@ public class Day19 extends Day {
     public static class Measurement {
         final List<BeaconDistance> relative;
 
-        public Measurement(Coordinate measurement, List<Coordinate> all) {
+        public Measurement(Point3d measurement, List<Point3d> all) {
             relative = new ArrayList<>();
-            for (Coordinate coordinate : all) {
+            for (Point3d coordinate : all) {
                 if (coordinate != measurement) {
                     relative.add(new BeaconDistance(measurement, coordinate));
                 }
@@ -259,7 +247,7 @@ public class Day19 extends Day {
             List<Integer> commonDistances = relative.stream()
                     .map(BeaconDistance::getDistance)
                     .filter(withDistances::contains)
-                    .collect(Collectors.toList());
+                    .toList();
             if (commonDistances.size() < 11) {
                 return null;
             } else {
@@ -276,17 +264,17 @@ public class Day19 extends Day {
 
     public static class BeaconDistance {
 
-        final Coordinate from;
-        final Coordinate to;
+        final Point3d from;
+        final Point3d to;
         final Integer distance;
 
-        public BeaconDistance(Coordinate from, Coordinate to) {
+        public BeaconDistance(Point3d from, Point3d to) {
             this.from = from;
             this.to = to;
-            distance = from.getManhattanDistance(to);
+            distance = from.manhattanDistance(to);
         }
 
-        public BeaconDistance(Coordinate from, Coordinate to, Integer distance) {
+        public BeaconDistance(Point3d from, Point3d to, Integer distance) {
             this.from = from;
             this.to = to;
             this.distance = distance;
@@ -297,5 +285,5 @@ public class Day19 extends Day {
         }
     }
 
-    static record DistPair (List<BeaconDistance> left, List<BeaconDistance> right) {}
+    record DistPair (List<BeaconDistance> left, List<BeaconDistance> right) {}
 }
